# cyclops

./: .gitignore  Problems.txt  README.md  Untitled.ipynb  pyproject.toml  requirements.txt  to_do.txt
analysis/: Template_CNN.py  Template_DNN.py  face_model.py  loss_function.py  optimiser_manager.py  optimisers.py  torch_optim.py
examples/: example_1.py
manual/: 0 overview.ipynb  1 simulation processing.ipynb  1.1 read 2D scalar.ipynb  1.2 read 2D vector.ipynb  2 SOO experiment design.ipynb  2.1 SOO 2D scalars.ipynb  2.2 SOO 1D scalars.ipynb  2.2 SOO 2D scalars symmetry.ipynb  2.3 SOO 2D vectors.ipynb  2.4 SOO 1D vectors.ipynb  3 MOO experiment design.ipynb  3.1 MOO 2D scalars.ipynb  3.2 MOO 1D scalars.ipynb  3.2 MOO 1D vectors.ipynb  3.3 MOO 2D vectors.ipynb  3.4 MOO 1D vectors.ipynb  4 experiment analysis.ipynb  4.0 results analysis.ipynb  assumptions.ipynb  complicated_use.ipynb  easy_use.ipynb  further_use.ipynb  overview.ipynb  use.ipynb
results/: backup.txt  best_setups.txt  best_symmetric_non_ideal_setups.txt  best_symmetric_setups.txt  best_uniform_non_ideal_setups.txt  best_uniform_setups.txt
sensors/: k-type-T.pickle  k-type-V.pickle  k-type.csv  k-type.txt  sensor_setup.py  thermo_file_reader.py
simulation/: exodus_manager.py  exodus_reader.py  exodus_reader2.py  field_manager.py  field_manager2.py  front_field.csv  gaussian_model.py  monoblock_out11.e  side_field.csv  temperature_field.csv  test_mesh.e
src/: best_setups.txt  constants.py  csv_reader.py  exodus_reader.py  exodus_reader2.py  experiment.py  experiment_management.py  face_model.py  (+34 more)
(+52 files in other folders)
