[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclops"
version = "0.1.1"
description = "Sensor placement optimiser for experiments"
authors = [
  { name = "Luke Humphrey", email = "luke.humphrey@ukaea.uk" },
  { name = "Lloyd Flecther", email = "lloyd.fletcher@ukaea.uk" },
  { name = "Dominic Harrington"},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU LGPL",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
  "meshio==5.3.4",
  "numpy==1.25.2",
  "netCDF4==1.6.4",
  "pymoo==0.6.0.1",
  "scipy==1.11.2",
  "matplotlib==3.7.3",
  "SciencePlots==2.1.0",
  "scikit-learn==1.3.0",
]

[project.urls]
"Repository" = "https://github.com/aurora-multiphysics/cyclops"
"Issue Tracker" = "https://github.com/aurora-multiphysics/cyclops/issues"

[tool.setuptools.packages.find]
where = ["src"]
